--- a/scratch_games.html
+++ b/scratch_games.html
@@ -67,7 +67,7 @@
      <div class="box-wrap">
       <div class="box"> 
         <h4>Guess the number</h4>
-        <a href ="game10.html"><img src ="images/game10.jpg" alt = "Game: Catch the bananas"></a>
+        <a href ="game10.html"><img src ="images/game10.jpg" alt = "Game: Guess the number"></a>
       </div>      
     </div><!--eof box -->
     
