"Fixed style issues."
1. Changed heading tags line height."
2. For locate-me game, changed speaker margin for smaller screens.
3. For locate-me game, removed avoidable clearfix,"

--- a/locate-me.html
+++ b/locate-me.html
@@ -37,10 +37,10 @@
     <h1>Locate the state?</h1>   
     <p class="note"><strong>Instructions</strong>: Click "Play" to start the game. Locate the state on the Indian map, click to select it.</p>
     <div class="gamearea">
-      <div class="button-box cf">
+      <div class="button-box">
         <button class="game-button transition" id="start">Play</button>
-        <div class="blackboard"><p></p></div>
-        <div class="speaker-icon cf off" id="speaker">
+        <div class="blackboard off"><p></p></div>
+        <div class="speaker-icon off" id="speaker">
           <p class="icons icon-speaker"></p>
         </div>
       </div>
