Show play button only once window is loaded.

--- a/locate-me.html
+++ b/locate-me.html
@@ -38,6 +38,7 @@
     <p class="note"><strong>Instructions</strong>: Click "Play" to start the game. Locate the state on the Indian map, click to select it.</p>
     <div class="gamearea">
       <div class="button-box">
+        <p id="loadingtxt">Loading...</p>
         <button class="game-button transition" id="start">Play</button>
         <div class="blackboard off"><p></p></div>
         <div class="speaker-icon off" id="speaker">
