--- a/locate-me.html
+++ b/locate-me.html
@@ -107,35 +107,35 @@
 
         <area shape="poly" coords="245,75,248,77,251,76,251,78,252,78,256,80,258,77,268,80,269,89,279,88,279,89,281,89,281,88,282,88,282,90,287,100,288,100,287,106,288,106,288,107,287,107,287,109,286,109,287,111,285,112,286,112,288,113,289,113,289,115,292,117,292,121,301,122,301,121,306,121,308,126,308,127,310,126,311,129,314,129,314,130,316,130,316,131,318,131,319,133,322,132,322,134,325,134,325,135,330,134,331,134,332,137,343,135,346,136,347,135,347,137,349,137,351,132,355,132,355,131,358,130,359,127,361,128,361,126,364,127,365,125,367,125,367,124,370,122,370,120,372,121,372,120,374,120,374,119,392,118,392,119,395,119,395,121,406,128,406,130,408,129,408,131,414,135,413,137,415,137,415,139,421,135,424,139,423,139,423,140,423,141,421,142,421,148,419,149,419,151,418,151,418,157,417,157,417,160,416,160,417,161,417,162,415,162,414,167,410,167,410,169,409,169,409,168,407,169,404,172,405,175,397,175,398,179,399,179,398,181,399,184,394,191,379,193,378,193,378,196,380,196,379,198,382,199,382,200,381,200,382,203,383,203,382,205,383,205,378,210,379,214,380,214,382,220,384,219,384,220,385,222,392,222,393,226,393,235,394,235,394,237,396,238,396,240,399,242,399,243,398,243,386,248,382,252,382,253,378,253,376,250,375,250,375,248,374,248,374,242,373,242,373,241,370,244,365,244,366,246,358,249,359,245,358,245,358,244,360,244,359,238,355,239,355,240,356,240,351,242,349,241,350,239,348,239,349,237,348,237,340,230,328,235,326,235,327,233,323,234,323,232,322,232,322,230,321,230,320,228,313,227,313,226,312,226,313,224,312,224,308,222,308,223,305,223,304,224,304,223,301,223,301,224,299,224,298,227,296,226,295,228,293,229,293,231,292,231,292,230,286,230,285,232,284,231,283,233,284,237,285,237,287,241,286,241,287,243,286,243,286,244,285,244,285,243,284,245,285,245,285,246,282,248,283,248,282,250,280,249,278,252,266,254,262,252,262,250,259,250,259,248,255,251,254,251,254,249,250,248,250,250,249,250,249,249,246,249,246,248,245,235,243,235,242,238,240,237,240,239,239,239,239,238,233,237,230,234,229,232,227,232,227,231,224,232,223,229,221,230,220,227,216,226,215,227,215,225,213,214,214,214,214,209,213,209,213,206,212,206,212,201,213,201,212,195,210,194,211,192,209,192,207,175,210,171,212,171,212,170,214,170,215,168,216,168,215,166,218,163,220,163,220,161,221,162,226,157,227,157,227,152,228,150,222,148,222,146,218,146,216,142,219,135,218,136,217,134,209,132,205,133,205,131,203,132,203,130,200,128,200,127,198,127,199,125,198,125,198,123,196,121,192,122,192,123,188,123,188,121,186,121,186,123,179,121,179,120,180,120,180,112,179,112,180,109,183,108,183,106,185,107,185,106,188,104,189,104,188,102,190,102,191,99,193,97,194,97,194,96,193,96,193,95,196,95,197,89,198,89,207,89,209,88,209,89,211,89,211,90,219,90,218,85,219,85,217,84,217,82,222,82,222,84,223,84,223,83,224,85,239,79,239,77,244,79" id="Jammu and Kashmir"/>
       </map>
-      <audio preload="auto" id="audio_andhrapradesh" src="audio/states/andhrapradesh.wav">
-      <audio preload="auto" id="audio_arunachalpradesh" src="audio/states/arunachalpradesh.wav">
-      <audio preload="auto" id="audio_assam" src="audio/states/assam.wav">
-      <audio preload="auto" id="audio_chhattisgarh" src="audio/states/chhattisgarh.wav">
-      <audio preload="auto" id="audio_goa" src="audio/states/goa.wav">
-      <audio preload="auto" id="audio_gujarat" src="audio/states/gujarat.wav">
-      <audio preload="auto" id="audio_jharkhand" src="audio/states/jharkhand.wav">
-      <audio preload="auto" id="audio_karnataka" src="audio/states/karnataka.wav">
-      <audio preload="auto" id="audio_kerala" src="audio/states/kerala.wav">
-      <audio preload="auto" id="audio_madhyapradesh" src="audio/states/madhyapradesh.wav">
-      <audio preload="auto" id="audio_maharashtra" src="audio/states/maharashtra.wav">
-      <audio preload="auto" id="audio_manipur" src="audio/states/manipur.wav">
-      <audio preload="auto" id="audio_meghalaya" src="audio/states/meghalaya.wav">
-      <audio preload="auto" id="audio_mizoram" src="audio/states/mizoram.wav">
-      <audio preload="auto" id="audio_nagaland" src="audio/states/nagaland.wav">
-      <audio preload="auto" id="audio_odisha" src="audio/states/odisha.wav">      
-      <audio preload="auto" id="audio_rajasthan" src="audio/states/rajasthan.wav">
-      <audio preload="auto" id="audio_sikkim" src="audio/states/sikkim.wav">
-      <audio preload="auto" id="audio_tamilnadu" src="audio/states/tamilnadu.wav">
-      <audio preload="auto" id="audio_telangana" src="audio/states/telangana.wav">
-      <audio preload="auto" id="audio_tripura" src="audio/states/tripura.wav">
-      <audio preload="auto" id="audio_westbengal" src="audio/states/westbengal.wav">
-      <audio preload="auto" id="audio_haryana" src="audio/states/haryana.wav">
-      <audio preload="auto" id="audio_himachalpradesh" src="audio/states/himachalpradesh.wav">
-      <audio preload="auto" id="audio_jammuandkashmir" src="audio/states/jammuandkashmir.wav">
-      <audio preload="auto" id="audio_punjab" src="audio/states/punjab.wav">
-      <audio preload="auto" id="audio_uttarakhand" src="audio/states/uttarakhand.wav">
-      <audio preload="auto" id="audio_uttarpradesh" src="audio/states/uttarpradesh.wav">
-      <audio preload="auto" id="audio_bihar" src="audio/states/bihar.wav">
+      <audio preload="auto" id="audio_andhrapradesh" src="audio/states/andhrapradesh.ogg">
+      <audio preload="auto" id="audio_arunachalpradesh" src="audio/states/arunachalpradesh.ogg">
+      <audio preload="auto" id="audio_assam" src="audio/states/assam.ogg">
+      <audio preload="auto" id="audio_bihar" src="audio/states/bihar.ogg">
+      <audio preload="auto" id="audio_chhattisgarh" src="audio/states/chhattisgarh.ogg">
+      <audio preload="auto" id="audio_goa" src="audio/states/goa.ogg">
+      <audio preload="auto" id="audio_gujarat" src="audio/states/gujarat.ogg">
+      <audio preload="auto" id="audio_jharkhand" src="audio/states/jharkhand.ogg">
+      <audio preload="auto" id="audio_karnataka" src="audio/states/karnataka.ogg">
+      <audio preload="auto" id="audio_kerala" src="audio/states/kerala.ogg">
+      <audio preload="auto" id="audio_madhyapradesh" src="audio/states/madhyapradesh.ogg">
+      <audio preload="auto" id="audio_maharashtra" src="audio/states/maharashtra.ogg">
+      <audio preload="auto" id="audio_manipur" src="audio/states/manipur.ogg">
+      <audio preload="auto" id="audio_meghalaya" src="audio/states/meghalaya.ogg">
+      <audio preload="auto" id="audio_mizoram" src="audio/states/mizoram.ogg">
+      <audio preload="auto" id="audio_nagaland" src="audio/states/nagaland.ogg">
+      <audio preload="auto" id="audio_odisha" src="audio/states/odisha.ogg">      
+      <audio preload="auto" id="audio_rajasthan" src="audio/states/rajasthan.ogg">
+      <audio preload="auto" id="audio_sikkim" src="audio/states/sikkim.ogg">
+      <audio preload="auto" id="audio_tamilnadu" src="audio/states/tamilnadu.ogg">
+      <audio preload="auto" id="audio_telangana" src="audio/states/telangana.ogg">
+      <audio preload="auto" id="audio_tripura" src="audio/states/tripura.ogg">
+      <audio preload="auto" id="audio_westbengal" src="audio/states/westbengal.ogg">
+      <audio preload="auto" id="audio_haryana" src="audio/states/haryana.ogg">
+      <audio preload="auto" id="audio_himachalpradesh" src="audio/states/himachalpradesh.ogg">
+      <audio preload="auto" id="audio_jammuandkashmir" src="audio/states/jammuandkashmir.ogg">
+      <audio preload="auto" id="audio_punjab" src="audio/states/punjab.ogg">
+      <audio preload="auto" id="audio_uttarakhand" src="audio/states/uttarakhand.ogg">
+      <audio preload="auto" id="audio_uttarpradesh" src="audio/states/uttarpradesh.ogg">
 
       <div id="result" class="off">
         <p class="state-name"></p>
