Change alphabet audio files to ogg format.

--- a/alphabets.html
+++ b/alphabets.html
@@ -43,157 +43,157 @@
         <div class="active">
           <h2>A</h2>
           <h2>a</h2>
-          <audio preload="auto" id="audio1" src="audio/alphabets/A.wav">
+          <audio preload="auto" id="audio1" src="audio/alpha/A.ogg">
           </audio>
         </div>
         <div>
           <h2>B</h2>
           <h2>b</h2>
-          <audio preload="auto" id="audio2" src="audio/alphabets/B.wav">
+          <audio preload="auto" id="audio2" src="audio/alpha/B.ogg">
           </audio>
         </div>
         <div>
           <h2>C</h2>
           <h2>c</h2>
-          <audio preload="auto" id="audio3" src="audio/alphabets/C.wav">
+          <audio preload="auto" id="audio3" src="audio/alpha/C.ogg">
           </audio>
         </div>
         <div>
           <h2>D</h2>
           <h2>d</h2>
-          <audio preload="auto" id="audio4" src="audio/alphabets/D.wav">
+          <audio preload="auto" id="audio4" src="audio/alpha/D.ogg">
           </audio>
         </div>
         <div>
           <h2>E</h2>
           <h2>e</h2>
-          <audio preload="auto" id="audio5" src="audio/alphabets/E.wav">
+          <audio preload="auto" id="audio5" src="audio/alpha/E.ogg">
           </audio>
         </div> 
         <div>
           <h2>F</h2>
           <h2>f</h2>
-          <audio preload="auto" id="audio6" src="audio/alphabets/F.wav">
+          <audio preload="auto" id="audio6" src="audio/alpha/F.ogg">
           </audio>
         </div>  
         <div>
           <h2>G</h2>
           <h2>g</h2>
-          <audio preload="auto" id="audio7" src="audio/alphabets/G.wav">
+          <audio preload="auto" id="audio7" src="audio/alpha/G.ogg">
           </audio>
         </div>  
         <div>
           <h2>H</h2>
           <h2>h</h2>
-          <audio preload="auto" id="audio8" src="audio/alphabets/H.wav">
+          <audio preload="auto" id="audio8" src="audio/alpha/H.ogg">
           </audio>
         </div>  
         <div>
           <h2>I</h2>
           <h2>i</h2>
-          <audio preload="auto" id="audio9" src="audio/alphabets/I.wav">
+          <audio preload="auto" id="audio9" src="audio/alpha/I.ogg">
           </audio>
         </div>  
         <div>
           <h2>J</h2>
           <h2>j</h2>
-          <audio preload="auto" id="audio10" src="audio/alphabets/J.wav">
+          <audio preload="auto" id="audio10" src="audio/alpha/J.ogg">
           </audio>
         </div>  
         <div>
           <h2>K</h2>
           <h2>k</h2>
-          <audio preload="auto" id="audio11" src="audio/alphabets/K.wav">
+          <audio preload="auto" id="audio11" src="audio/alpha/K.ogg">
           </audio>
         </div>  
         <div>
           <h2>L</h2>
           <h2>l</h2>
-          <audio preload="auto" id="audio12" src="audio/alphabets/L.wav">
+          <audio preload="auto" id="audio12" src="audio/alpha/L.ogg">
           </audio>
         </div>  
         <div>
           <h2>M</h2>
           <h2>m</h2>
-          <audio preload="auto" id="audio13" src="audio/alphabets/M.wav">
+          <audio preload="auto" id="audio13" src="audio/alpha/M.ogg">
           </audio>
         </div>  
         <div>
           <h2>N</h2>
           <h2>n</h2>
-          <audio preload="auto" id="audio14" src="audio/alphabets/N.wav">
+          <audio preload="auto" id="audio14" src="audio/alpha/N.ogg">
           </audio>
         </div> 
         <div>
           <h2>O</h2>
           <h2>o</h2>
-          <audio preload="auto" id="audio15" src="audio/alphabets/O.wav">
+          <audio preload="auto" id="audio15" src="audio/alpha/O.ogg">
           </audio>
         </div>  
         <div>
           <h2>P</h2>
           <h2>p</h2>
-          <audio preload="auto" id="audio16" src="audio/alphabets/P.wav">
+          <audio preload="auto" id="audio16" src="audio/alpha/P.ogg">
           </audio>
         </div>  
         <div>
           <h2>Q</h2>
           <h2>q</h2>
-          <audio preload="auto" id="audio17" src="audio/alphabets/Q.wav">
+          <audio preload="auto" id="audio17" src="audio/alpha/Q.ogg">
           </audio>
         </div>  
         <div>
           <h2>R</h2>
           <h2>r</h2>
-          <audio preload="auto" id="audio18" src="audio/alphabets/R.wav">
+          <audio preload="auto" id="audio18" src="audio/alpha/R.ogg">
           </audio>
         </div>  
         <div>
           <h2>S</h2>
           <h2>s</h2>
-          <audio preload="auto" id="audio19" src="audio/alphabets/S.wav">
+          <audio preload="auto" id="audio19" src="audio/alpha/S.ogg">
           </audio>
         </div>  
         <div>
           <h2>T</h2>
           <h2>t</h2>
-          <audio preload="auto" id="audio20" src="audio/alphabets/T.wav">
+          <audio preload="auto" id="audio20" src="audio/alpha/T.ogg">
           </audio>
         </div>  
         <div>
           <h2>U</h2>
           <h2>u</h2>
-          <audio preload="auto" id="audio21" src="audio/alphabets/U.wav">
+          <audio preload="auto" id="audio21" src="audio/alpha/U.ogg">
           </audio>
         </div>  
         <div>
           <h2>V</h2>
           <h2>v</h2>
-          <audio preload="auto" id="audio22" src="audio/alphabets/V.wav">
+          <audio preload="auto" id="audio22" src="audio/alpha/V.ogg">
           </audio>
         </div>  
         <div>
           <h2>W</h2>
           <h2>w</h2>
-          <audio preload="auto" id="audio23" src="audio/alphabets/W.wav">
+          <audio preload="auto" id="audio23" src="audio/alpha/W.ogg">
           </audio>
         </div>  
         <div>
           <h2>X</h2>
           <h2>x</h2>
-          <audio preload="auto" id="audio24" src="audio/alphabets/X.wav">
+          <audio preload="auto" id="audio24" src="audio/alpha/X.ogg">
           </audio>
         </div>  
         <div>
           <h2>Y</h2>
           <h2>y</h2>
-          <audio preload="auto" id="audio25" src="audio/alphabets/Y.wav">
+          <audio preload="auto" id="audio25" src="audio/alpha/Y.ogg">
           </audio>
         </div>  
         <div>
           <h2>Z</h2>
           <h2>z</h2>
-          <audio preload="auto" id="audio26" src="audio/alphabets/Z.wav">
+          <audio preload="auto" id="audio26" src="audio/alpha/Z.ogg">
           </audio>
         </div>   
                 
