Change shapes audio files to ogg format.

--- a/shapes.html
+++ b/shapes.html
@@ -44,43 +44,43 @@
         <div class="active">
           <img src="images/shapes/square.png" alt="Square">
           <h2>Square</h2>
-          <audio preload="auto" id="audio1" src="audio/shapes/square.wav"></audio>
+          <audio preload="auto" id="audio1" src="audio/shapes/square.ogg"></audio>
         </div>
   
         <div>
           <img src="images/shapes/rectangle.png" alt="Rectangle">
           <h2>Rectangle</h2>
-          <audio preload="auto" id="audio2" src="audio/shapes/rectangle.wav"></audio>
+          <audio preload="auto" id="audio2" src="audio/shapes/rectangle.ogg"></audio>
         </div>      
   
         <div>
           <img src="images/shapes/triangle.png" alt="Triangle">
           <h2>Triangle</h2>
-          <audio preload="auto" id="audio3" src="audio/shapes/triangle.wav"></audio>
+          <audio preload="auto" id="audio3" src="audio/shapes/triangle.ogg"></audio>
         </div>    
    
         <div>
           <img src="images/shapes/circle.png" alt="Circle">
           <h2>Circle</h2>
-          <audio preload="auto" id="audio4" src="audio/shapes/circle.wav"></audio>
+          <audio preload="auto" id="audio4" src="audio/shapes/circle.ogg"></audio>
         </div>
   
         <div>
           <img src="images/shapes/oval.png" alt="Oval">
           <h2>Oval</h2>
-          <audio preload="auto" id="audio5" src="audio/shapes/oval.wav"></audio>
+          <audio preload="auto" id="audio5" src="audio/shapes/oval.ogg"></audio>
         </div>
         
         <div>
           <img src="images/shapes/diamond.png" alt="Diamond">
           <h2>Diamond</h2>
-          <audio preload="auto" id="audio6" src="audio/shapes/diamond.wav"></audio>
+          <audio preload="auto" id="audio6" src="audio/shapes/diamond.ogg"></audio>
         </div>      
    
          <div>
           <img src="images/shapes/star.png" alt="Star">
           <h2>Star</h2>
-          <audio preload="auto" id="audio7" src="audio/shapes/star.wav"></audio>
+          <audio preload="auto" id="audio7" src="audio/shapes/star.ogg"></audio>
         </div>  
                                         
       </div><!--eof leftside display-->
