Added meta tag for charset.

--- a/me.html
+++ b/me.html
@@ -2,17 +2,19 @@
 <html>
 
 <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Toddler Fun Area | About Me</title>
-    <meta name="Description" content="Preschool Learning Games For Kids. Games designed to stimulate their learning and memory skills.">
-    <meta name="Keywords" content="toddler, kids, online games, educational games, learning, learning for kids">
-    <meta name="Author" content="Vidya Ramakrishnan">
-    <meta property="fb:admins" content="525114057" />
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-  
-    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
-    <link rel="stylesheet" type="text/css" href="css/mystylesheet.css" media="screen">
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <title>Toddler Fun Area | About Me</title>
+  <meta name="Description" content="Preschool Learning Games For Kids. Games designed to stimulate their learning and memory skills.">
+  <meta name="Keywords" content="toddler, kids, online games, educational games, learning, learning for kids">
+  <meta name="Author" content="Vidya Ramakrishnan">
+  <meta property="fb:admins" content="525114057" />
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
+  <link rel="stylesheet" type="text/css" href="css/mystylesheet.css" media="screen">
 
 </head>
 <body>
