--- a/what-ami.html
+++ b/what-ami.html
@@ -2,6 +2,8 @@
 <html>
 
 <head>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <title>Toddler Fun Area | Games: Shapes</title>
   <meta name="Description" content="Preschool Learning Games For Kids. Games designed to stimulate their learning and memory skills.">
   <meta name="Keywords" content="toddler, kids, online games, educational games, learning, learning for kids">
