--- a/locate-me.html
+++ b/locate-me.html
@@ -2,7 +2,9 @@
 <html>
 
 <head>
-  <title>Toddler Fun Area | Games</title>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+  <title>Toddler Fun Area | Games: States of India</title>
   <meta name="Description" content="Preschool Learning Games For Kids. Games designed to stimulate their learning and memory skills.">
   <meta name="Keywords" content="toddler, kids, online games, educational games, learning, learning for kids">
   <meta name="Author" content="Vidya Ramakrishnan">
